[gd_scene load_steps=31 format=4 uid="uid://30jb4kc5kf5p"]

[ext_resource type="Script" uid="uid://bau3n36oqclrd" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bv1ul1qynrdwd" path="res://GameBoard/Cursor/Cursor.tscn" id="2"]
[ext_resource type="Script" uid="uid://0fou5uop6pj4" path="res://scripts/CameraController.gd" id="2_c6i3y"]
[ext_resource type="PackedScene" uid="uid://d4mhjq651egt" path="res://Units/Unit.tscn" id="3"]
[ext_resource type="Script" uid="uid://de277qa1oc88h" path="res://GameBoard/GameBoard.gd" id="4"]
[ext_resource type="Resource" uid="uid://b7almwqj75cry" path="res://GameBoard/Grid.tres" id="5"]
[ext_resource type="PackedScene" uid="uid://n825j345khoi" path="res://UnitOverlay/UnitOverlay.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://ck8r5v7w2oat3" path="res://AttackOverlay/AttackOverlay.tscn" id="6_attack"]
[ext_resource type="PackedScene" uid="uid://dxyfefsgkgc4l" path="res://GameBoard/UnitPath.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://ceanoo0yxcj8i" path="res://Units/squirrel.png" id="8"]
[ext_resource type="Texture2D" uid="uid://don6rhlapjhye" path="res://Units/bear.png" id="9"]
[ext_resource type="Texture2D" uid="uid://x4kxxdinjx3r" path="res://Units/bugcat.png" id="10"]
[ext_resource type="Script" uid="uid://nhal8fo1p50m" path="res://Resources/UnitStats.gd" id="10_fpfj3"]
[ext_resource type="PackedScene" uid="uid://de53ukdqyusan" path="res://Background/Map.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://b4kl8m7n2qaqr" path="res://CombatUI/PlayerActionUI.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://bjt3k7u6nfkk1" path="res://CombatUI/TurnCounter.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://b3n2k7m8qr5p1" path="res://CombatUI/DebugUI.tscn" id="14"]
[ext_resource type="PackedScene" uid="uid://c5n7k8naqr6p2" path="res://CombatUI/UnitInfoPanel.tscn" id="15"]

[sub_resource type="Curve2D" id="Curve2D_kjvhd"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_kjvhd"]
script = ExtResource("10_fpfj3")
max_hp = 100
current_hp = 100
max_ap = 2
current_ap = 2
movement_cost = 1
attack_cost = 1
move_range = 3
move_speed = 600.0
moves_remaining = 3
attack_damage = 25
attack_range = 1
defense = 5
accuracy = 90
evasion = 10
critical_chance = 10
critical_multiplier = 1.5
is_alive = true
has_moved = false
has_attacked = false
can_counter = true

[sub_resource type="Curve2D" id="Curve2D_5tuhn"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_bear2"]
script = ExtResource("10_fpfj3")
max_hp = 100
current_hp = 100
max_ap = 2
current_ap = 2
movement_cost = 1
attack_cost = 1
move_range = 3
move_speed = 600.0
moves_remaining = 3
attack_damage = 25
attack_range = 1
defense = 5
accuracy = 90
evasion = 10
critical_chance = 10
critical_multiplier = 1.5
is_alive = true
has_moved = false
has_attacked = false
can_counter = true

[sub_resource type="Curve2D" id="Curve2D_2gh4u"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_2gh4u"]
script = ExtResource("10_fpfj3")
max_hp = 100
current_hp = 100
max_ap = 2
current_ap = 2
movement_cost = 1
attack_cost = 1
move_range = 7
move_speed = 600.0
moves_remaining = 7
attack_damage = 120
attack_range = 1
defense = 5
accuracy = 90
evasion = 10
critical_chance = 10
critical_multiplier = 1.5
is_alive = true
has_moved = false
has_attacked = false
can_counter = true

[sub_resource type="Curve2D" id="Curve2D_devvj"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_cat2"]
script = ExtResource("10_fpfj3")
max_hp = 100
current_hp = 100
max_ap = 2
current_ap = 2
movement_cost = 1
attack_cost = 1
move_range = 7
move_speed = 600.0
moves_remaining = 7
attack_damage = 120
attack_range = 1
defense = 5
accuracy = 90
evasion = 10
critical_chance = 10
critical_multiplier = 1.5
is_alive = true
has_moved = false
has_attacked = false
can_counter = true

[sub_resource type="Curve2D" id="Curve2D_3b0ty"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_3b0ty"]
script = ExtResource("10_fpfj3")
max_hp = 100
current_hp = 100
max_ap = 2
current_ap = 2
movement_cost = 1
attack_cost = 1
move_range = 5
move_speed = 600.0
moves_remaining = 5
attack_damage = 25
attack_range = 1
defense = 5
accuracy = 90
evasion = 10
critical_chance = 10
critical_multiplier = 1.5
is_alive = true
has_moved = false
has_attacked = false
can_counter = true

[sub_resource type="Curve2D" id="Curve2D_bg4s2"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_squirrel2"]
script = ExtResource("10_fpfj3")
max_hp = 100
current_hp = 100
max_ap = 2
current_ap = 2
movement_cost = 1
attack_cost = 1
move_range = 5
move_speed = 600.0
moves_remaining = 5
attack_damage = 25
attack_range = 1
defense = 5
accuracy = 90
evasion = 10
critical_chance = 10
critical_multiplier = 1.5
is_alive = true
has_moved = false
has_attacked = false
can_counter = true

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_c6i3y")

[node name="Map" parent="." instance=ExtResource("11")]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAAMAAEAAAAAAAAAAAALAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAALAAIAAAAAAAAAAAAMAAIAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAAMAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAADAAQAAAAAAAAAAAACAAQAAAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAAAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAADAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAALAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAAMAAUAAAAAAAAAAAALAAUAAAAAAAAAAAAKAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAANAAYAAAAAAAAAAAAMAAYAAAAAAAAAAAALAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAACAAcAAAAAAAAAAAABAAcAAAAAAAAAAAAAAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAMAAcAAAAAAAAAAAANAAcAAAAAAAAAAAA=")

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("4")
grid = ExtResource("5")

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource("6")]

[node name="AttackOverlay" parent="GameBoard" instance=ExtResource("6_attack")]

[node name="UnitPath" parent="GameBoard" instance=ExtResource("7")]

[node name="Cursor" parent="GameBoard" instance=ExtResource("2")]
position = Vector2(40, 40)

[node name="Bear" parent="GameBoard" instance=ExtResource("3")]
position = Vector2(600, 520)
curve = SubResource("Curve2D_kjvhd")
unit_type = 1
stats = SubResource("Resource_kjvhd")
skin = ExtResource("9")
skin_offset = Vector2(2, 9)

[node name="Bear2" parent="GameBoard" instance=ExtResource("3")]
position = Vector2(600, 600)
curve = SubResource("Curve2D_5tuhn")
unit_type = 1
stats = SubResource("Resource_bear2")
skin = ExtResource("9")
skin_offset = Vector2(2, 9)

[node name="Cat" parent="GameBoard" instance=ExtResource("3")]
position = Vector2(840, 440)
curve = SubResource("Curve2D_2gh4u")
stats = SubResource("Resource_2gh4u")
skin = ExtResource("10")
skin_offset = Vector2(5, 12)

[node name="Cat2" parent="GameBoard" instance=ExtResource("3")]
position = Vector2(840, 520)
curve = SubResource("Curve2D_devvj")
stats = SubResource("Resource_cat2")
skin = ExtResource("10")
skin_offset = Vector2(5, 12)

[node name="Squirrel" parent="GameBoard" instance=ExtResource("3")]
position = Vector2(360, 280)
curve = SubResource("Curve2D_3b0ty")
unit_type = 2
stats = SubResource("Resource_3b0ty")
skin = ExtResource("8")
skin_offset = Vector2(6, 17)

[node name="Squirrel2" parent="GameBoard" instance=ExtResource("3")]
position = Vector2(360, 360)
curve = SubResource("Curve2D_bg4s2")
unit_type = 2
stats = SubResource("Resource_squirrel2")
skin = ExtResource("8")
skin_offset = Vector2(6, 17)

[node name="PlayerActionUI" parent="." instance=ExtResource("12")]
visible = false

[node name="TurnCounter" parent="." instance=ExtResource("13")]

[node name="DebugUI" parent="." instance=ExtResource("14")]
visible = false

[node name="UnitInfoPanel" parent="." instance=ExtResource("15")]

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
